# docx_tool

./: .env.example  .flake8  .gitignore  .mcp.json  CACHE.md  CLAUDE.md  GEMINI.md  IMPLEMENTACAO_COMPLETA.md  README.md  app.py  convert_docx.py  pyproject.toml  remove_colors.py  rename_files.py  requirements.txt  run_bot.sh  run_cli.sh  run_dashboard.sh  run_ingestion.sh  simple_process.py
.claude/: settings.json
Administrativo/: agencia_nacional_de_saude_suplementar_ans_lei_9961.md  agencias_reguladoras_lei_9986.docx  agencias_reguladoras_lei_9986.md  agu_lc_73_de_1993.docx  agu_lc_73_de_1993.md  agu_lei_9469.docx  agu_lei_9469.md  anatel_lei_9472.docx  anatel_lei_9472.md  aneel_lei_9074.rtf  antt_lei_10233.md  anvisa_lei_9782.md  aposentadoria_lc_152.md  aposentadoria_para_pessoa_com_deficiencia_lc_142.md  assuncao_pela_uniao_de_responsabilidades_civis_perante_terceiros_em_caso_de_atentados_terroristas_atos_de_guerra_lei_10774.md  atribuicoes_da_agu_em_carater_emergencial_ou_provisorio_lei_9028.md  capacitacao_e_competitividade_do_setor_de_informatica_e_automacao_lei_8248.md  codigo_brasileiro_de_telecomunicacoes_lei_4117.docx  codigo_brasileiro_de_telecomunicacoes_lei_4117.md  codigo_de_etica_profissional_do_servidor_publico_civil_do_poder_executivo_federal_dec_1171.md  concessao_de_uso_especial_mp_2220.md  concessao_e_permissao_lei_8987.docx  concessao_e_permissao_lei_8987.md  consorcios_publicos_lei_11107.docx  consorcios_publicos_lei_11107.md  contratacao_por_tempo_determ_para_atender_a_necessidade_tempor_de_excepcional_interesse_publ_nos_termos_do_inciso_ix_do_art_37_lei_8745.md  criacao_de_carreiras_e_organizacao_de_cargos_efetivos_das_autarquias_especiais_denominadas_agencias_reguladoras_lei_10871.md  crimes_de_responsabilidade_lei_1079.md  decreto_11531.md  decreto_9310.md  (+121 more)
(+26 files in other folders)
